# PWR-code-dump

Archiv/: LICENSE.md  README.md
BallsCppLinux/: Ball.cpp  Ball.h  BallTrap.cpp  BallTrap.h  CMakeLists.txt  CollidingItem.cpp  CollidingItem.h  Map.cpp  Map.h  PrintManager.cpp  PrintManager.h  README.md  Wall.cpp  Wall.h  main.cpp
Bazy-Danych---Projekt-Magazyn-2018/: README.md  obsługa.sql  skrypt bazy.sql
Bezp.syst.iUs-ugInform.2/: .gitignore  README.md
Bezp.syst.iUs-ugInform.2/ExampleCodes/: copy.c  obciaz.c  statt.c
CharacterSheetAPI-master/: .gitignore
CharacterSheetAPI-master/CharacterSheetAPI/: test.sql
CharacterSheetAPI/CharacterSheetAPI/: CharacterSheetAPI.sln  SQLQuery1.sql  test2.sql
Code-Cloud/: README.md
Code-Cloud/Cloud/: Cloud.sln
Competing-neural-networks-in-arcade-games/: README.md
Competing-neural-networks-in-arcade-games/Presentation/: csharp_timers.json
FotogrametriaZespolowy2019/: .gitignore  README.md
Genetic-Algorithm-Traveling-Sales-Man-Problem/: README.md
Genetic-Algorithm-Traveling-Sales-Man-Problem/TSP/: TSP.sln
Genetic-multi-tasks/: README.md
In-ynieria-Oprogramowania-Laboratorium/: List.xhtml  README.md  View.xhtml  tworzBaze.sql
InternetoweBazyDanychPWR/: README.md
Mini-Survival/: .gitignore  Bedroom.cpp  Bedroom.h  CMakeLists.txt  ConsoleManager.cpp  ConsoleManager.h  Creature.cpp  Creature.h  Garden.cpp  Garden.h  Kitchen.cpp  Kitchen.h  LICENSE.md  README.md  Room.cpp  Room.h  Waitingroom.cpp  Waitingroom.h  main.cpp
Threads/: .gitignore
Threads/src/: Ball.cpp  (+6 more)
Urzadzenia_Peryferyjne/: README.md
(+652 files in other folders)
